<resources>
    <string name="app_name">Story App</string>
    <string name="str_logo_story_app">Logo Story App</string>
    <string name="str_welcome_to_story_app">Welcome to Story App</string>

    <string name="register">Sign Up</string>
    <string name="login">Sign In</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="column_required">Column is Required</string>

    <string name="no_file_chosen">No File Chosen</string>
    <string name="unable_cam">Unable to bring up Camera</string>
    <string name="created_at">Created at %1$s</string>
    <string name="str_camera">Camera</string>
    <string name="str_flip_camera">Flip Camera</string>
    <string name="str_image_detail_story">Image Detail Story</string>
    <string name="str_name">Name</string>
    <string name="str_description">Description</string>
    <string name="str_uploaded">Uploaded on %1$s</string>
    <string name="str_button_language">Button Language</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_sign_in">Sign In</string>
    <string name="str_no_acc">Don\'t have an account yet?</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="str_emote_sad">Emote Sad</string>
    <string name="str_there_is_no_story">There is no Story . . .</string>
    <string name="str_add_story">Add Story</string>
    <string name="str_image_story">Image Story</string>
    <string name="str_floating_camera">Floating Camera</string>
    <string name="str_choose_image">Choose Image</string>
    <string name="str_upload">Upload</string>
    <string name="str_let_s_register">Let\'s Register!</string>
    <string name="str_fullname">Fullname</string>
    <string name="str_retype_password">Retype Password</string>
    <string name="str_have_an_account">Have an Account?</string>
    <string name="str_failed_take_pict">Failed to Take Pictures</string>
    <string name="str_cant_get_perm">Can\'t get Permission</string>
    <string name="str_choose_app">Choose App</string>
    <string name="str_6_char_pass">Password is at least 6 Characters</string>
    <string name="str_sign_in_to_continue">Sign In to Continue</string>
    <string name="success_login">Success Login</string>
    <string name="next">Next</string>
    <string name="failed_login">Login Failed</string>
    <string name="upload_success">Upload Success</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="register_success">Register Success</string>
    <string name="password_not_same">Passwords are not the same</string>
    <string name="str_logout">Logout</string>
    <string name="str_ask_to_logout">Are you sure to Logout?</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="empty_desc">Empty Description</string>
    <string name="enable_loc">Please Allowed your Location</string>
    <string name="error">There is an Error</string>
    <string name="register_failed">Register Failed</string>
    <string name="txt_hi">Hi %1$s</string>
    <string name="str_active_loc">Activate Location</string>
    <string name="str_click_to_continue">Click Continue to Open Home Page</string>
    <string name="str_continue">Continue</string>
</resources>