<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.LoginPageActivity">

    <ProgressBar
        android:id="@+id/progress_bar_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/btnLang"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/str_button_language"
        android:src="@drawable/ic_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/str_logo_story_app"
        android:transitionName="t_logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_welcome"
        style="@style/TitleText"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/str_welcome_to_story_app"
        android:transitionName="t_h1"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/sign_in_to_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/str_sign_in_to_continue"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/txt_welcome"
        app:layout_constraintStart_toStartOf="@+id/txt_welcome"
        app:layout_constraintTop_toBottomOf="@+id/txt_welcome" />

    <com.bangkit.storyapp.ui.customView.EditTextEmail
        android:id="@+id/inp_edit_Email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/str_email"
        android:inputType="textEmailAddress"
        android:minHeight="45dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_to_continue"
        app:layout_constraintStart_toStartOf="@+id/sign_in_to_continue"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_to_continue" />

    <com.bangkit.storyapp.ui.customView.EditTextPassword
        android:id="@+id/inp_edit_Pass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_pass"
        android:hint="@string/str_password"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:minHeight="45dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/inp_edit_Email"
        app:layout_constraintStart_toStartOf="@+id/inp_edit_Email"
        app:layout_constraintTop_toBottomOf="@+id/inp_edit_Email" />

    <com.bangkit.storyapp.ui.customView.ButtonLogin
        android:id="@+id/btn_sign_in"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/str_sign_in"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/inp_edit_Pass"
        app:layout_constraintStart_toStartOf="@+id/inp_edit_Pass"
        app:layout_constraintTop_toBottomOf="@+id/inp_edit_Pass" />

    <TextView
        android:id="@+id/no_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/str_no_acc"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

    <com.bangkit.storyapp.ui.customView.ButtonRegister
        android:id="@+id/btn_sign_up"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:text="@string/str_sign_up"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/no_acc"
        app:layout_constraintTop_toBottomOf="@+id/no_acc" />
</androidx.constraintlayout.widget.ConstraintLayout>